overflow bug 2

--- a/styles/card-sugerencia.css
+++ b/styles/card-sugerencia.css
@@ -9,7 +9,7 @@
     text-align: center;
     width: 100%;
     position: absolute;
-    z-index: 5;
+    z-index: 1;
     top: 38px;
     color: #886247;
 
